added hook functionality
added user activity dllmain
added managing for managing memory

--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -33,6 +33,7 @@
              Absent="disallow"
              TypicalDefault="install"
              AllowAdvertise="no"
+             ConfigurableDirectory="ELASTICSEASRCHINSTALLFOLDER"
              InstallDefault="local"
              >
 
