--- a/WSUI.Module/View/ElasticSearchRiverSettingsView.xaml
+++ b/WSUI.Module/View/ElasticSearchRiverSettingsView.xaml
@@ -55,10 +55,15 @@
                                 <StackPanel 
                                 Grid.Column="1"
                                 Orientation="Horizontal">
-                                    <Label 
-                                >
-                                        Every night and when my computer is idle
+                                    <Label>
+                                        Every night and when my computer is idle. Idle Time-out:
                                     </Label>
+                                    <Controls:NumericUpDown Value="{Binding IdleTime,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                                        Minimum="1"
+                                        Maximum="120"
+                                        Delay="500"
+                                        Speedup="true" />
+                                    <Label>m.</Label>
                                 </StackPanel>
                             </RadioButton>
                             
