--- a/WSUI.Module/View/ElasticSearchRiverSettingsView.xaml
+++ b/WSUI.Module/View/ElasticSearchRiverSettingsView.xaml
@@ -56,8 +56,8 @@
                                 Grid.Column="1"
                                 Orientation="Horizontal">
                                     <Label>
-                                        Every night and when my computer is idle. Idle Time-out:
-                                    </Label>
+                                        When my computer is idle. Idle Time-out:
+                                    </Label> <!--Every night and-->
                                     <Controls:NumericUpDown Value="{Binding IdleTime,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                                         Minimum="1"
                                         Maximum="120"
@@ -137,7 +137,7 @@
                             
                         </Grid>
 
-                        <Label>You can always update your mail index by clicking "Index Data" from the OutlookFinder menu</Label>
+                        <!--<Label>You can always update your mail index by clicking "Index Data" from the OutlookFinder menu</Label>-->
 
                     </StackPanel>
                 </GroupBox>
@@ -154,7 +154,7 @@
                 <ColumnDefinition Width="75"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             
-            <Label Margin="3">These changes will take effect when you estart your computer.</Label>
+            <Label Margin="3">These changes will take effect when you restart your computer.</Label>
             
             <Button 
                 Grid.Column="1"
