--- a/WSUI.Module/Service/Dialogs/Message/MessageView.xaml
+++ b/WSUI.Module/Service/Dialogs/Message/MessageView.xaml
@@ -10,6 +10,7 @@
                       MinWidth="400" MinHeight="100" MaxWidth="450" MaxHeight="150"
                       Title="{Binding Title}" 
                       WindowStartupLocation="CenterScreen"         
+                      GlowBrush="{DynamicResource AccentColorBrush}"
              >
     <Window.Resources>
         <ResourceDictionary>
