--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -137,40 +137,40 @@
         <Directory Id="ELASTICSEASRCHINSTALLFOLDER" Name="ElasticSearch">
 
           <Component Id="ELASTICSEASRCHINSTALLFOLDER" Guid="20D2309D-3D31-45C6-9C34-34859D61A91B">
-            <RemoveFolder On="both" Id="ELASTICSEASRCHINSTALLFOLDER" />
+            <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDER" />
             <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="ElasticSearch" />
           </Component>
 
           <Directory Id="ELASTICSEASRCHINSTALLFOLDERBIN" Name="bin">
             <Component Id="ELASTICSEASRCHINSTALLFOLDERBIN" Guid="7B2ED621-76B5-4FBC-BB23-8E0FADE4BDCC">
-              <RemoveFolder On="both" Id="ELASTICSEASRCHINSTALLFOLDERBIN" />
+              <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERBIN" />
               <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="bin" />
             </Component>
           </Directory>
 
           <Directory Id="ELASTICSEASRCHINSTALLFOLDERCONFIG" Name="config">
             <Component Id="ELASTICSEASRCHINSTALLFOLDERCONFIG" Guid="20AEDE7C-8EA0-4B41-B33A-7DDC77DF9925">
-              <RemoveFolder On="both" Id="ELASTICSEASRCHINSTALLFOLDERCONFIG" />
+              <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERCONFIG" />
               <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="config" />
             </Component>
           </Directory>
           
           <Directory Id="ELASTICSEASRCHINSTALLFOLDERPLUGINS" Name="plugins">
             <Component Id="ELASTICSEASRCHINSTALLFOLDERPLUGINS" Guid="E8C9D655-A35C-40C5-A576-73E400DEF3CA">
-              <RemoveFolder On="both" Id="ELASTICSEASRCHINSTALLFOLDERPLUGINS" />
+              <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERPLUGINS" />
               <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="plugins" />
             </Component>
           </Directory>
 
           <Directory Id="ELASTICSEASRCHINSTALLFOLDERLIB" Name="lib">
             <Component Id="ELASTICSEASRCHINSTALLFOLDERLIB" Guid="7FA11EB8-B03F-44AB-B620-C8263C37C637">
-              <RemoveFolder On="both" Id="ELASTICSEASRCHINSTALLFOLDERLIB" />
+              <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERLIB" />
               <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="lib" />
             </Component>
 
             <Directory Id="ELASTICSEASRCHINSTALLFOLDERLIBSIGAR" Name="sigar">
               <Component Id="ELASTICSEASRCHINSTALLFOLDERLIBSIGAR" Guid="CDA8023C-E724-4843-8F03-587D6CF64C53">
-                <RemoveFolder On="both" Id="ELASTICSEASRCHINSTALLFOLDERLIBSIGAR" />
+                <RemoveFolder On="uninstall" Id="ELASTICSEASRCHINSTALLFOLDERLIBSIGAR" />
                 <RegistryValue Root="HKCU" Key="Software\ElasticSearch" Type="string" Value="sigar" />
               </Component>
             </Directory>
