--- a/WSUI.Module/View/ElasticSearchRiverSettingsView.xaml
+++ b/WSUI.Module/View/ElasticSearchRiverSettingsView.xaml
@@ -56,7 +56,7 @@
                                 Grid.Column="1"
                                 Orientation="Horizontal">
                                     <Label>
-                                        When my computer is idle. Idle Time-out:
+                                        Every night and when my computer is idle. Idle Time-out:
                                     </Label> <!--Every night and-->
                                     <Controls:NumericUpDown Value="{Binding IdleTime,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
                                         Minimum="1"
