--- a/WSUI.Module/Service/ResourceTemplate.xaml
+++ b/WSUI.Module/Service/ResourceTemplate.xaml
@@ -442,7 +442,7 @@
                 <TextBlock Grid.Column="2" Margin="2 5 2 5" FontWeight="Bold" Foreground="Red" Text="{Binding Count,Converter={StaticResource countConverter}}"
                            Visibility="{Binding Count, Converter={StaticResource IntToVisibilityConverter}}"></TextBlock>
                 <ctrl:HightliteTextBlock Grid.Column="3" Grid.ColumnSpan="2" Margin="2 5 5 5" Hightlight="{Binding Path=DataContext.HighlightPattern,Mode=OneTime,ElementName=this}" Text="{Binding Path=Filename}" />
-                <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateReceived,Converter={StaticResource dateConverter}}" />
+                <TextBlock Grid.Column="5" Margin="5" Foreground="Black" Text="{Binding Path=DateCreated,Converter={StaticResource dateConverter}}" />
 
                 <i:Interaction.Behaviors>
                     <behaviors:GridListItemBehavior></behaviors:GridListItemBehavior>
