--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -244,10 +244,9 @@
         <File Id="_Microsoft_Practices_Unity_xml" Name="Microsoft.Practices.Unity.xml" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_Microsoft_Vbe_Interop_dll" Name="Microsoft.Vbe.Interop.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_Office_dll" Name="Office.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
-        <File Id="_PDFLibNet_dll" Name="PDFLibNet.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_ICSharpCode_AvalonEdit_dll" Name="ICSharpCode.AvalonEdit.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_System_Windows_Interactivity_dll" Name="System.Windows.Interactivity.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
-        <File Id="_OFPreview_dll_config" Name="OFPreview.dll.config" Source="$(var.OF.OutlookPlugin.TargetDir)" />
+        <File Id="_OF_Preview_dll_config" Name="OF.Preview.dll.config" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_OF_Infrastructure_dll" Name="OF.Infrastructure.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_OF_Module_dll" Name="OF.Module.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_Html_Agility_Pack_dll" Name="HtmlAgilityPack.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
